--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-        crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -30,6 +30,24 @@
             <div class="col">
                 <form action="#" method="get">
 
+                    <input type="text" id="search" name="inSearch" placeholder="Enter keyword here..">
+                    <button type="submit" style="color: green;">Search</button>
+                    <select name="country" id="countryid">
+                        <option value="all">All countries</option>
+                        <option value="Belgium">Belgium</option>
+                        <option value="France">France</option>
+                        <option value="Portugal">Portugal</option>
+                        <option value="Spain">Spain</option>
+                    </select>
+
+                    <select name="year" id="yearid">
+                        <option value="all">All Years</option>
+                        <option value="Belgium">2025</option>
+                        <option value="France">2024</option>
+                        <option value="Portugal">2023</option>
+                        <option value="Spain">2022</option>
+                    </select>
+                    <button type="submit" style="color: blue;">Filter</button>
 
                 </form>
             </div>
@@ -45,7 +63,7 @@
                 </div>
                 <div class="col-8">
                     <div class="row">
-                        <div class="col" >PHOTO</div>
+                        <div class="col">PHOTO</div>
                         <div class="col">DETAIL</div>
                     </div>
 
@@ -53,7 +71,7 @@
                         <div class="col"> COMMENTAIRES</div>
                     </div>
                 </div>
-         
+
 
     </main>
 
@@ -61,8 +79,11 @@
 
     </footer>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
+
+
 </body>
 
 </html>
