--- a/index.html
+++ b/index.html
@@ -89,17 +89,20 @@
 
                     <ul class="nav nav-tabs">
                         <li class="nav-item" id="listInfos">
-                            <a id="linkDescriptions" class="nav-link active" aria-current="page" href="#">DESCRIPTION</a>
-                            <p>info complementaires</p>
+                            <a id="linkDescriptions" class="nav-link active" aria-current="page"
+                                href="#">DESCRIPTION</a>
+
                         </li>
                         <li class="nav-item">
-                            <a  id="linkCommentaires" class="nav-link" href="#">COMMENTAIRES </a>
+                            <a id="linkCommentaires" class="nav-link" href="#">COMMENTAIRES </a>
                         </li>
                         <li class="nav-item">
-                            <a  id="linkNotes" class="nav-link" href="#">NOTES PERSONNELES</a>
+                            <a id="linkNotes" class="nav-link" href="#">NOTES PERSONNELES</a>
                         </li>
 
                     </ul>
+
+                    <div class="col" id="infos">Infos complémentaires</div>
 
 
                 </div>
