j'ai ajouter le filtrage sur le pays et l'anné du vin

--- a/index.html
+++ b/index.html
@@ -42,12 +42,21 @@
                             <option selected>All countries</option>
                             <option value="Belgium">Belgium</option>
                             <option value="France">France</option>
+                            <option value="USA">USA</option>
+                            <option value="Portugal">Portugal</option>
+                            <option value="Italy">Italy</option>
+                            <option value="Germany">Germany</option>
+                            <option value="Hungary">Hungary</option>
+                            <option value="Spain">Spain</option>
+                            <option value="Austria">Austria</option>
+                            <option value="Argentina">Argentina</option>
                         </select>
                     </div>
                     <div class="col-2">
                         <select class="form-select" aria-label="Default select example" name="year" id="year">
                             <option selected>All years</option>
                             <option>2000</option>
+                            <option>2009</option>
                             <option>2010</option>
                         </select>
                     </div>
