--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         </div>
         <nav>
             <ul>
-                <li><a href="http://localhost/Caviste2025/">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a class="menu-link" href="http://localhost/Caviste2025/">Home</a></li>
+                <li><a class="menu-link" href="#">About</a></li>
             </ul>
         </nav>
     </header>
@@ -29,17 +29,17 @@
         <div class="row">
             <div class="col">
                 <form action="#" method="get" class="row mb-3" id="frmSearch">
-                    <div class="col-2">
+                    <div class="col-md-2 col-6">
                         <label for="keyword" class="form-label" style="display: none;">Keyword</label>
                         <input type="text" class="form-control" id="keyword" name="keyword"
                             placeholder="Enter keyword here...">
                     </div>
-                    <div class="col-1">
+                    <div class="col-md-1 col-6">
                         <button type="button" class="btn btn-primary" id="btSearch">Search</button>
                     </div>
                     <div class="col-2">
                         <select class="form-select" aria-label="Default select example" name="country" id="country">
-                            <option selected>All countries</option>
+                            <option value="" selected>All countries</option>
                             <option value="Belgium">Belgium</option>
                             <option value="France">France</option>
                             <option value="USA">USA</option>
@@ -54,7 +54,7 @@
                     </div>
                     <div class="col-2">
                         <select class="form-select" aria-label="Default select example" name="year" id="year">
-                            <option selected>All years</option>
+                            <option value="" selected>All years</option>
                             <option>2000</option>
                             <option>2009</option>
                             <option>2010</option>
